--- a/apps/vtr/src/app/app.component.html
+++ b/apps/vtr/src/app/app.component.html
@@ -1,5 +1,3 @@
-
-
 <header class="flex">
   <img
     alt="Nx logo"
@@ -7,10 +5,10 @@
     src="https://nx.dev/assets/images/nx-logo-white.svg"
   />
   <h1>Welcome to {{ title }}!</h1>
-  <h1 class="staticH1">Test Heading</h1>
 </header>
 <main>
   <h2>Resources &amp; Tools</h2>
+  <p class="counter">Number: 0​​​​​​​</p>
   <p>
     Thank you for using and showing some ♥ for Nx.
   </p>
@@ -97,8 +95,7 @@
 ng g @nrwl/angular:lib ui
 
 # Add a component
-ng g @nrwl/angular:component xyz --project ui</pre
-    >
+ng g @nrwl/angular:component xyz --project ui</pre>
   </details>
   <details>
     <summary>View dependency graph</summary>
@@ -115,8 +112,6 @@ ng affected:test
 
 # run e2e tests for current changes
 ng affected:e2e
-</pre
-    >
+    </pre>
   </details>
 </main>
-<lla-test></lla-test>
